--- a/HotelsBooking/src/main/resources/templates/manager/addHotelApartment.html
+++ b/HotelsBooking/src/main/resources/templates/manager/addHotelApartment.html
@@ -15,33 +15,34 @@
         <div th:replace="fragments/managerDetailsMenu::managerDetailsMenu"></div>
         <div class="col-12 col-lg-8">
             <div class="container-fluid manage-result-con">
-                <form action="#" method="post">
+                <form th:action="@{/manager/add-apartment}" th:method="post" th:object="${apartment}">
+                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
                     <div class="container-fluid inner-manage-result-con">
                         <div class="row">
                             <div class="col-4">
                                 <div class="form-floating">
-                                    <input name="roomName" type="text" class="form-control" id="roomName"
+                                    <input th:field="*{name}" type="text" class="form-control" id="roomName"
                                            placeholder="Room name*" required>
                                     <label for="roomName">Room name*</label>
                                 </div>
                             </div>
                             <div class="col-4">
                                 <div class="form-floating">
-                                    <input name="price" type="text" class="form-control" id="price"
+                                    <input th:field="*{price}" type="text" class="form-control" id="price"
                                            placeholder="Price*" required>
                                     <label for="price">Price*</label>
                                 </div>
                             </div>
                             <div class="col-4">
                                 <div class="form-floating">
-                                    <select id="category" name="category"
+                                    <select id="category" th:field="*{category}"
                                             class="form-select form-select-lg mb-3"
                                             aria-label="Default select example" required>
-                                        <option value="0">Single bed room</option>
-                                        <option value="1">Double bed room</option>
-                                        <option value="2">Triple bed room</option>
-                                        <option value="3">Lux apartment</option>
-                                        <option value="4">President lux apartment</option>
+                                        <option value="STANDARD">Single bed room</option>
+                                        <option value="DOUBLE">Double bed room</option>
+                                        <option value="TRIPLE">Triple bed room</option>
+                                        <option value="LUX">Lux apartment</option>
+                                        <option value="PRESIDENT_LUX">President lux apartment</option>
                                     </select>
                                     <label for="category">Category</label>
                                 </div>
@@ -50,7 +51,7 @@
                         <div class="row">
                             <div class="col-6">
                                 <div class="form-floating">
-                                    <select id="singleBedCount" name="singleBedCount"
+                                    <select id="singleBedCount" th:field="*{singleBedCount}"
                                             class="form-select form-select-lg mb-3"
                                             aria-label="Default select example" required>
                                         <option value="0">0</option>
@@ -65,7 +66,7 @@
                             </div>
                             <div class="col-6">
                                 <div class="form-floating">
-                                    <select id="doubleBedCount" name="doubleBedCount"
+                                    <select id="doubleBedCount" th:field="*{doubleBedCount}"
                                             class="form-select form-select-lg mb-3"
                                             aria-label="Default select example" required>
                                         <option value="0">0</option>
@@ -82,20 +83,20 @@
                         <div class="row">
                             <div class="col-4">
                                 <div class="form-check form-check-inline">
-                                    <input name="tv" class="form-check-input" type="checkbox" id="tv" value="true">
+                                    <input th:field="*{comfort.tv}" class="form-check-input" type="checkbox" id="tv" value="true">
                                     <label class="form-check-label" for="tv">tv</label>
                                 </div>
                             </div>
                             <div class="col-4">
                                 <div class="form-check form-check-inline">
-                                    <input name="conditioner" class="form-check-input" type="checkbox" id="conditioner"
+                                    <input th:field="*{comfort.conditioner}" class="form-check-input" type="checkbox" id="conditioner"
                                            value="true">
                                     <label class="form-check-label" for="conditioner">conditioner</label>
                                 </div>
                             </div>
                             <div class="col-4">
                                 <div class="form-check form-check-inline">
-                                    <input name="bar" class="form-check-input" type="checkbox" id="bar" value="true">
+                                    <input th:field="*{comfort.bar}" class="form-check-input" type="checkbox" id="bar" value="true">
                                     <label class="form-check-label" for="bar">bar</label>
                                 </div>
                             </div>
@@ -103,21 +104,21 @@
                         <div class="row">
                             <div class="col-4">
                                 <div class="form-check form-check-inline">
-                                    <input name="refrigerator" class="form-check-input" type="checkbox"
+                                    <input th:field="*{comfort.refrigerator}" class="form-check-input" type="checkbox"
                                            id="refrigerator" value="true">
                                     <label class="form-check-label" for="refrigerator">refrigerator</label>
                                 </div>
                             </div>
                             <div class="col-4">
                                 <div class="form-check form-check-inline">
-                                    <input name="balcony" class="form-check-input" type="checkbox" id="balcony"
+                                    <input th:field="*{comfort.balcony}" class="form-check-input" type="checkbox" id="balcony"
                                            value="true">
                                     <label class="form-check-label" for="balcony">balcony</label>
                                 </div>
                             </div>
                             <div class="col-4">
                                 <div class="form-check form-check-inline">
-                                    <input name="jacuzzi" class="form-check-input" type="checkbox" id="jacuzzi"
+                                    <input th:field="*{comfort.jacuzzi}" class="form-check-input" type="checkbox" id="jacuzzi"
                                            value="true">
                                     <label class="form-check-label" for="jacuzzi">jacuzzi</label>
                                 </div>
@@ -126,20 +127,20 @@
                         <div class="row">
                             <div class="col-4">
                                 <div class="form-check form-check-inline">
-                                    <input name="breakfast" class="form-check-input" type="checkbox" id="breakfast"
+                                    <input th:field="*{comfort.breakfast}" class="form-check-input" type="checkbox" id="breakfast"
                                            value="true">
                                     <label class="form-check-label" for="breakfast">breakfast</label>
                                 </div>
                             </div>
                             <div class="col-4">
                                 <div class="form-check form-check-inline">
-                                    <input name="wifi" class="form-check-input" type="checkbox" id="wifi" value="true">
+                                    <input th:field="*{comfort.wifi}" class="form-check-input" type="checkbox" id="wifi" value="true">
                                     <label class="form-check-label" for="wifi">wi-fi</label>
                                 </div>
                             </div>
                             <div class="col-4">
                                 <div class="form-check form-check-inline">
-                                    <input name="transfer" class="form-check-input" type="checkbox" id="transfer"
+                                    <input th:field="*{comfort.transfer}" class="form-check-input" type="checkbox" id="transfer"
                                            value="true">
                                     <label class="form-check-label" for="transfer">transfer</label>
                                 </div>
@@ -148,21 +149,21 @@
                         <div class="row">
                             <div class="col-4">
                                 <div class="form-check form-check-inline">
-                                    <input name="parking" class="form-check-input" type="checkbox" id="parking"
+                                    <input th:field="*{comfort.parking}" class="form-check-input" type="checkbox" id="parking"
                                            value="true">
                                     <label class="form-check-label" for="parking">parking</label>
                                 </div>
                             </div>
                             <div class="col-4">
                                 <div class="form-check form-check-inline">
-                                    <input name="swimmingPool" class="form-check-input" type="checkbox"
+                                    <input th:field="*{comfort.swimmingPool}" class="form-check-input" type="checkbox"
                                            id="swimmingPool" value="true">
                                     <label class="form-check-label" for="swimmingPool">swimming pool</label>
                                 </div>
                             </div>
                             <div class="col-4">
                                 <div class="form-check form-check-inline">
-                                    <input name="gym" class="form-check-input" type="checkbox" id="gym" value="true">
+                                    <input th:field="*{comfort.gym}" class="form-check-input" type="checkbox" id="gym" value="true">
                                     <label class="form-check-label" for="gym">gym</label>
                                 </div>
                             </div>
@@ -170,20 +171,20 @@
                         <div class="row">
                             <div class="col-4">
                                 <div class="form-check form-check-inline">
-                                    <input name="restaurant" class="form-check-input" type="checkbox" id="restaurant"
+                                    <input th:field="*{comfort.restaurant}" class="form-check-input" type="checkbox" id="restaurant"
                                            value="true">
                                     <label class="form-check-label" for="restaurant">restaurant</label>
                                 </div>
                             </div>
                             <div class="col-4">
                                 <div class="form-check form-check-inline">
-                                    <input name="pets" class="form-check-input" type="checkbox" id="pets" value="true">
+                                    <input th:field="*{comfort.pets}" class="form-check-input" type="checkbox" id="pets" value="true">
                                     <label class="form-check-label" for="pets">pets</label>
                                 </div>
                             </div>
                             <div class="col-4">
                                 <div class="form-check form-check-inline">
-                                    <input name="accessibilityFeatures" class="form-check-input" type="checkbox"
+                                    <input th:field="*{comfort.accessibilityFeatures}" class="form-check-input" type="checkbox"
                                            id="accessibilityFeatures" value="true">
                                     <label class="form-check-label" for="accessibilityFeatures">accessibility
                                         features</label>
@@ -191,9 +192,6 @@
                             </div>
                         </div>
                         <button type="submit" class="btn btn-primary form-floating">Add new room</button>
-                        <div class="alert alert-danger alert-hotel-manager" role="alert" th:if="${saveError}">
-                            <span class="iconify" data-icon="akar-icons:triangle-alert"></span> Add room error!
-                        </div>
                         <div class="alert alert-success alert-password-update" role="alert" th:if="${saveSuccess}">
                             <span class="iconify" data-icon="clarity:success-standard-line"></span> Room added!
                         </div>
