--- a/HotelsBooking/src/main/resources/templates/registration.html
+++ b/HotelsBooking/src/main/resources/templates/registration.html
@@ -24,6 +24,7 @@
         </div>
         <div class="col-12 col-lg-6 inner-form1">
             <form th:action="@{/registration}" th:method="post" th:object="${user}">
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
                 <div class="form-floating">
                     <input type="email" th:field="*{email}" class="form-control email" id="floatingInput"
                            placeholder="name@example.com" required>
@@ -80,7 +81,7 @@
                 </div>
                 <button onclick="validatePassword()" class="w-100 btn btn-lg btn-primary" type="submit">Sign up</button>
                 <div th:if="${userSaveError}" class="alert alert-danger alert-danger-custom" role="alert">
-                    <span class="iconify" data-icon="akar-icons:triangle-alert"></span>  Duplicate email or registration error!
+                    <span class="iconify" data-icon="akar-icons:triangle-alert"></span>  Duplicate email or  phone number!
                 </div>
             </form>
         </div>
