--- a/HotelsBooking/src/main/resources/templates/user/personalDetails.html
+++ b/HotelsBooking/src/main/resources/templates/user/personalDetails.html
@@ -18,10 +18,10 @@
             <div class="container-fluid manage-result-con">
                 <div class="container-fluid inner-manage-result-con">
                     <form th:action="@{/user/personal-details}" th:method="post" th:object="${user}">
+                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
                         <input type="hidden" th:field="*{id}"/>
                         <input type="hidden" th:field="*{roles}"/>
                         <input type="hidden" th:field="*{active}"/>
-                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
                         <h4>User personal details:</h4>
                         <div class="row">
                             <div class="col-4">
@@ -89,10 +89,10 @@
                             Delete account</a>
                         <div class="alert alert-danger alert-update-user-data" role="alert" th:if="${saveError}">
                             <span class="iconify" data-icon="akar-icons:triangle-alert"></span> Duplicate email or
-                            save error!
+                            phone number!
                         </div>
                         <div class="alert alert-danger alert-update-user-data" role="alert" th:if="${deleteError}">
-                            <span class="iconify" data-icon="akar-icons:triangle-alert"></span> Delete error!
+                            <span class="iconify" data-icon="akar-icons:triangle-alert"></span> Delete error! You must not have any bookings!
                         </div>
                     </form>
                 </div>
